# multilingual-rouge

./: README.md  pyproject.toml
multilingual_rouge/: __init__.py  io.py  rouge.py  rouge_scorer.py  scoring.py  stemmers.py  tokenization_wrapper.py  tokenizers.py
multilingual_rouge/bengali_stemmer/: __init__.py  common.rules  parser.py
