[project]
name = "multilingual-rouge"
version = "0.0.1"
description = "A fork of Multilingual ROUGE (a fork of XL-Sum)"
license = { file = "LICENSE" }
readme = "README.md"
authors = [
    { name = "Nandan Thakur", email = "nandant@gmail.com" },
]
requires-python = ">=3.6"
keywords = [
    "ROUGE-L",
    "Multilingual",
    "XL-SUM"
]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "TurkishStemmer",
    "absl-py",
    "nltk",
    "numpy",
    "six>=1.14",
    "pythainlp",
    "pyonmttok",
    "jieba",
    "fugashi[unidic]",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/nthakur/multliingual-rouge"

[tool.setuptools.packages.find]
include = ["multilingual_rouge*"]
namespaces = false

[tool.ruff]
line-length = 119
fix = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
# Skip `E731` (do not assign a lambda expression, use a def)
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731"
]

[tool.ruff.lint.per-file-ignores]
"examples/**" = [
    # Ignore `E402` (import violations) in all examples
    "E402", 
    # Ignore missing required imports
    "I002"
    ]

[tool.ruff.lint.isort]
known-third-party = ["datasets"]
required-imports = ["from __future__ import annotations"]
